@@ -1,3 +1,8 @@
+2004-08-09  James Tanis  <jtt@outpost.tanis.org>
+
+	* lib/b_addrgroup.c (listen_activity): Get DGRAM server handling
+	multiple connections.
+
 2004-08-03  James Tanis  <jtt@outpost.tanis.org>
 
 	* lib/b_netaddr.c (bk_netaddr_clone): Missed break in previously
